# DummyApp

./: .gitignore  .gitmodules  CMakeBuildGuide.md  CMakeLists.txt  CMakeLists0.txt  Cross-Compilation.md  README.md  backup_build.sh
src/: main.cpp
